--- a/01 - fundamentos/index.html
+++ b/01 - fundamentos/index.html
@@ -1,14 +1,16 @@
 <!DOCTYPE html>
-<html lang="pt-br">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Primeiro site</title>
-    <link rel="stylesheet" a href="./styles/style.css">
+    <title>Document</title>
 </head>
 <body>
-  <div>
+    <!--<div>
+    <h3>Produto A</h3>
+    <p>R$: 500,00</p>
+    <a href="#"> Comprar</a>
     <h3>Produto A</h3>
     <p>R$: 500,00</p>
     <a href="#"> Comprar</a>
@@ -16,17 +18,17 @@
 
   <p> Texto qualquer <span style="color: red;">Testando span </span></p>
 
-  <!-- CSS inline-->
+   CSS inline
   <h3 style="font-size: 25px; color:aqua;"> Título qualquier</h3>
   <hr>
 
-  <!-- Elementos block e inline-->
+  Elementos block e inline
   <span> Essa tag fica em linha</span>
   <span> Testando tag em linha</span>
   <p>Essa tag fica em bloco</p>
   <hr>
 
-  <!--Tags HTML5-->
+  Tags HTML5
   <nav>Testando</nav>
   <main>Testando</main>
   <aside>Testando</aside>
@@ -37,12 +39,12 @@
 
 <p class="fundo-azul"> Tag de fundo azul</p>
 
-<!--Background image (imagem de fundo)-->
+Background image (imagem de fundo)
 <div id="minha-div">
   <h3 class="h3">Testando</h3>
 </div>
 
-<!--Altura e largura-->
+Altura e largura
 
 <div id="altura-largura">
 <p>
@@ -71,6 +73,42 @@
     testando arredondamento de borda
   </p>
 </div>
+<hr>
+
+<table>
+<tr>
+  <th>
+    Nome
+  </th>
+  <th>
+    Contatos
+  </th>
+</tr>
+
+<tr>
+  <th>
+    Rafael
+  </th>
+
+<tr>
+  <th>Laerte</th>
+</tr>
+
+<tr>
+  <th>Pedro</th>
+</tr>
+</table>-->
+
+<!--<table border="15">
+  <tr>
+      <td colspan="3">Pontuação 1</td>
+  </tr>
+  <tr>
+      <td>100</td>
+      <td>200</td>
+      <td>300</td>
+  </tr>
+</table>-->
 
 
 </body>
