--- a/01 - fundamentos/Exercicio-1/Formulario.html
+++ b/01 - fundamentos/Exercicio-1/Formulario.html
@@ -1,3 +1,85 @@
-<form>
-    
-</form>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Formulário</title>
+</head>
+
+<body>
+    <h1>Cadastro de usuario</h1>
+
+    <form>
+        <label for="Nome"> Nome: </label>
+        <input type="text" placeholder="" name="nome">
+        <br>
+        <br>
+        
+        <label for="telefone"> Telefone </label>
+        <input type="number" placeholder="" nome="telefone">
+        <br>
+        <br>
+
+        <label for="email"> email </label>
+        <input type="email" placeholder="" nome="Senha">
+        <br>
+        <br>
+
+        <label for="Senha"> Senha: </label>
+        <input type="number" placeholder="" nome="Senha">
+        <br>
+        <br>
+
+    <h> Sexo </h>
+        <input type="radio" id="Masculino" name="Sexo" value="Masculino">
+        <label for="Masculino"> Masculino </label>
+        <input type="radio" id="Feminino" name="genero" value="feeminino">
+        <label for="Feminino"> Feminino </label>
+        <br>
+        <br>
+
+        <label for="UF"> UF </label>
+        <select id="UF" name="UF">
+            <option value="DF"> DF </option>
+            <option value="DF"> DF </option>
+            <option value="DF"> DF </option>
+        </select>
+        <br>
+        <br>
+
+        <h> hobbies </h>
+            <fieldset>
+                <input type="checkbox" id="Futebol" name="Hobbies" value="Futebol">
+                <label for="Futebol"> Futebol </label>
+
+                <input type="checkbox" id="Xadrez" name="Hobbies" value="Xadrez">
+                <label for="Xadrez"> Xadrez </label>
+
+                <input type="checkbox" id="Xadrez" name="Hobbies" value="Xadrez">
+                <label for="Xadrez"> Xadrez </label>
+
+                <input type="checkbox" id="Xadrez" name="Hobbies" value="Xadrez">
+                <label for="Xadrez"> Xadrez </label>
+
+                <input type="checkbox" id="Xadrez" name="Hobbies" value="Xadrez">
+                <label for="Xadrez"> Xadrez </label>
+
+                <input type="checkbox" id="Xadrez" name="Hobbies" value="Xadrez">
+                <label for="Xadrez"> Xadrez </label>
+            </fieldset>
+
+            <br>
+
+            <label for="Observação"> Observação </label>
+            <textarea class="altura-largura" name="Observação" placeholder=""></textarea>
+
+            <br>
+            <br>
+
+            <button type="menu"> Voltar </button>
+            <button type="menu"> Limpar </button>
+            <button type="menu"> Salvar </button>
+    </form>
+</body>
+</html>
