--- a/01 - fundamentos/index.html
+++ b/01 - fundamentos/index.html
@@ -7,7 +7,7 @@
     <title>Document</title>
 </head>
 <body>
-    <!--<div>
+    <div>
     <h3>Produto A</h3>
     <p>R$: 500,00</p>
     <a href="#"> Comprar</a>
@@ -97,9 +97,9 @@ Altura e largura
 <tr>
   <th>Pedro</th>
 </tr>
-</table>-->
+</table>
 
-<!--<table border="15">
+<table border="15">
   <tr>
       <td colspan="3">Pontuação 1</td>
   </tr>
@@ -108,7 +108,7 @@ Altura e largura
       <td>200</td>
       <td>300</td>
   </tr>
-</table>-->
+</table>
 
 
 </body>
