--- a/01 - fundamentos/Exercicio-1/Tabela.html
+++ b/01 - fundamentos/Exercicio-1/Tabela.html
@@ -13,9 +13,9 @@
 <table border="3">
 
   <tr>
-      <th rowspan="2">Nome</td>
-      <th colspan="2">Contatos</td>
-      <th colspan="3">Endereços</td>      
+      <th rowspan="2">Nome</th>
+      <th colspan="2">Contatos</th>
+      <th colspan="3">Endereços</th>      
   </tr>
   
   <tr>
