Alteração de campo email

--- a/Exercicio-2/Tabela.html
+++ b/Exercicio-2/Tabela.html
@@ -50,14 +50,18 @@
       </tr>
       <tr>
         <th scope="row" style="background-color: rgb(199, 59, 59);">Rafael</th>
-        <td colspan="2" style="background-color: rgb(199, 59, 59);">(61)9123654</td>
+        <td style="background-color: rgb(199, 59, 59);">(61)9123654</td>  
+        <td style="background-color: rgb(199, 59, 59);">Rafael@gmail.com</td>      
         <td style="background-color: rgb(199, 59, 59);">72777777</td>
         <td style="background-color: rgb(199, 59, 59);">DF</td>
         <td style="background-color: rgb(199, 59, 59);">Brasília</td>
       </tr>
       
     </tbody>
+
   </table>
+
+  <h3>Lista de contatos</h3>
 
 </body>
 </html>
